# solid_exceptions

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  adaptors.cpp  adaptors.h  command_queue.cpp  command_queue.h  commands.h  implementations.h  interfaces.h  library.h
tests/: CMakeLists.txt  tests.cpp
